--- a/style.css
+++ b/style.css
@@ -1,20 +1,47 @@
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
 .calculator {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;  
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.row, button, output {
+    flex: 1 1 0;
+}
+
+.row, button {
+    max-height: min(23vw, 17vh);
+}
+
+button, output {
+    margin: 1%;
+    font-size: 2.5em;
 }
 
 .row {
     display: flex;
-    flex: 1 1 0;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: min(100vw, 74vh);
 }
 
 button {
-    flex: 1 1 0;
     aspect-ratio: 1 / 1;
+    font-family: inherit;
+    padding: 0;
+    border-radius: 20%;
+    font-weight: 600;
+    max-width: min(23vw, 17vh);
 }
 
 output {
-    flex: 1 1 0;
     border: black 1px solid;
     text-align: right;
+    overflow: auto;
 }
